fix bug for profile overlapping

--- a/css/home.css
+++ b/css/home.css
@@ -30,7 +30,7 @@ body::after {
     top: 0;
     left: 0;
     background-color: black;
-    opacity: .6;
+    opacity: .7;
     z-index: -1;
 }
 
@@ -53,6 +53,8 @@ a {
     position: relative;
     z-index: 1;
     overflow: hidden;
+    /* background-color: rgba(165, 42, 42, 0.226); */
+
 }
 
 .flex-container .navbar {
@@ -66,6 +68,7 @@ a {
     text-align: center;
     flex-direction: column;
     background-color: rgba(10, 10, 10, 0.719);
+
     cursor: pointer;
 }
 
@@ -75,14 +78,33 @@ a {
 }
 
 
+
+
+
+
+.flex-container .profile div {
+margin: 20px;
+padding: 10px;
+}
+
+
 .flex-container .profile {
-    width: 80%;
+   
+    width: 100%;
     height: 100%;
-    padding: 2px;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+     
 }
+
+
+
+
+
+
+
 
 #femi {
     margin-bottom: 2em;
